Evaluation in course

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1023,3 +1023,15 @@ year = {2018},
   year = {2022},
   howpublished = {\url{https://openmodelica.org/doc/OpenModelicaUsersGuide/latest/ompython.html}}
 }
+
+% MCC
+@article{chicco2020advantages,
+  title={The advantages of the Matthews correlation coefficient (MCC) over F1 score and accuracy in binary classification evaluation},
+  author={Chicco, Davide and Jurman, Giuseppe},
+  journal={BMC genomics},
+  volume={21},
+  number={1},
+  pages={1--13},
+  year={2020},
+  publisher={Springer}
+}
